Fix for openlayers controls on firefox + clean-up

--- a/src/app/components/map/map.component.scss
+++ b/src/app/components/map/map.component.scss
@@ -7,14 +7,16 @@
     .ol-zoom-in,
     .ol-zoom-out,
     .ol-rotate-reset {
-        width: 1.5em;
-        height: 1.5em;
+        width: 1.8em;
+        height: 1.8em;
         font-size: 1.5em;
-        opacity: 0.7;
-        margin: 0;
+        font-weight: bold;
+        opacity: 0.5;
+        margin: 5px;
         padding: 0;
         border: 2;
         border-radius: 0;
+        background-color: lightgray;
     }
     .ol-hidden {
         display: none;
